--- a/app/about.html
+++ b/app/about.html
@@ -33,13 +33,13 @@
               <a href="about.html" class="nav__link nav__link--js ml-5"
                 >About</a
               >
-              <a href="" class="nav__link nav__link--js ml-5">Save</a>
-              <a href="" class="nav__link ml-5">Invest</a>
+              <a href="savings.html" class="nav__link nav__link--js ml-5">Save</a>
+              <a href="invest.html" class="nav__link ml-5">Invest</a>
               <!-- <a href="" class="nav__link ml-5">Blog</a>
               <a href="" class="nav__link ml-5">FAQ</a> -->
-              <a href="" class="nav__link ml-5">Sign In</a>
+              <a href="login.html" class="nav__link ml-5">Sign In</a>
               <a
-                href=""
+                href="signup.html"
                 class="nav__link ml-5 btn btn-sm btn-custom btn-outline-success c-header__btn text-success"
                 >Create a free Account</a
               >
@@ -76,10 +76,7 @@
           <div class="col-md-8 mx-auto text-center">
             <h2 class="c-bold c-header__title pb-3 text-center">Our Story</h2>
             <span class="c-normal c-header__text lead">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam,
-              commodi nesciunt ipsam consequatur ullam culpa adipisci
-              repellendus sint laudantium! Quasi labore id quidem veritatis
-              eveniet voluptatibus, quia aliquam alias eius.
+              SelVest is a sub-company of SelCapital, a multi faceted financial services company offering tailored financial services and solutions to individuals, companies and the public sector. We provide a diversified range of financial services including Consumer Finance, Commercial and SME Finance, Corporate Finance and Financial Advisory and Fund Management Services.
             </span>
           </div>
         </div>
@@ -216,24 +213,22 @@
           <div class="col-md-6 pr-md-5">
             <h3 class="c-title__bigger pb-md-0">Our values & mission</h3>
             <p class="pt-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-              ea fuga numquam cum voluptates, in, autem atque error debitis ex
-              ipsam temporibus quibusdam odit labore sunt alias, aspernatur
-              recusandae explicabo!
+              To become a leading Pan African Financial Institution providing tailored financial solutions to a diversified clientele base.
             </p>
+           
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-              autem quas cupiditate.
+              To deliver simple smart solutions across our business lines to help our clients achieve their objectives and goals.
             </p>
+            <p>Our people have extensive experience in the financial services sector in Nigeria and Sub Saharan Africa with combined experience of over thirty (30) years, and are devoted to pooling complementary resources and functions to give clients the best value</p>
             <ul
               class="d-flex flex-wrap about__list align-items-center justify-content-between"
             >
-              <li>Secured transactions</li>
-              <li>Secured transactions</li>
-              <li>Secured transactions</li>
-              <li>Secured transactions</li>
-              <li>Secured transactions</li>
-              <li>Secured transactions</li>
+              <li>Our People</li>
+              <li>
+                Client Satisfaction
+              </li>
+              <li>Innovation & technology</li>
+              <li>Professional practices</li>
             </ul>
           </div>
 
@@ -366,9 +361,9 @@
                 Download SelVest App Today
               </h1>
               <p class="text-white">
-                Lorem ipsum dolor sit amet consectetur adipis
+                Get the link sent to you &amp; start saving
                 <br class="d-none d-sm-inline-block" />
-                SelVest & get referral bonus
+                with SelVest today !
               </p>
               <div
                 class="text-center shadow mx-auto d-inline-flex flex-column flex-md-row mt-2"
@@ -400,8 +395,7 @@
                 <img src="assets/images/logo.png" class="logo" />
               </li>
               <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci
-                sociis porttitor varius neque viverra.
+                SelVest, digitizing, automating & simplify savings &amp; investment transactions
               </li>
               <li
                 class="d-flex align-items-center justify-content-center justify-content-sm-start"
