--- a/app/invest.html
+++ b/app/invest.html
@@ -28,7 +28,9 @@
             <div class="menu">
               <!-- <a href="" class="nav__link ml-5">About Us</a> -->
 
-              <a href="" class="nav__link nav__link--js ml-5">About</a>
+              <a href="about.html" class="nav__link nav__link--js ml-5"
+                >About</a
+              >
 
               <a href="savings.html" class="nav__link ml-5">Save</a>
               <a href="invest.html" class="nav__link ml-5">Invest</a>
@@ -210,10 +212,8 @@
                 Investment from profiting sectors
               </h2>
               <p class="pb-3">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Reprehenderit, ratione excepturi? Obcaecati, recusandae nisi
-                distinctio officiis earum consequatur sequi quia reprehenderit
-                sunt repellendus repellat nulla ab eaque, accusamus aliquid id!
+                SelVest patners with top Investment companies to bring you the
+                best investment opportuinities.
               </p>
               <div class="d-flex">
                 <span
@@ -224,8 +224,8 @@
                 <div class="pt-2">
                   <h5>Transportation</h5>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Perferendis sunt repudiandae ad.
+                    Access to Investment in one the most lucrative sectors in
+                    the Nigerian economy.
                   </p>
                 </div>
               </div>
@@ -238,9 +238,8 @@
                 <div class="pt-2">
                   <h5>Agriculture</h5>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Accusamus in eum velit nostrum fugiat veritatis? Voluptate
-                    eos iure debitis.
+                    Opportuinity to leverage on contract farming model, which
+                    benefit investors along the Agricultural supply chain.
                   </p>
                 </div>
               </div>
@@ -253,8 +252,8 @@
                 <div class="pt-2">
                   <h5>SME</h5>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolorem omnis repellendus debitis.
+                    We help provide access to Investment in profitable
+                    businesses
                   </p>
                 </div>
               </div>
@@ -294,6 +293,9 @@
                 You can make money aside by inviting freinds, family &amp;
                 contacts to SelVest vest.
               </p>
+              <a href="signup.html" class="btn btn-custom btn-success">
+                Get Started
+              </a>
             </div>
           </div>
           <div class="col-md-6">
@@ -439,9 +441,9 @@
                 Download SelVest App Today
               </h1>
               <p class="text-white">
-                Lorem ipsum dolor sit amet consectetur adipis
+                Get the link sent to you &amp; start investing
                 <br class="d-none d-sm-inline-block" />
-                SelVest & get referral bonus
+                with SelVest today!
               </p>
               <div
                 class="text-center shadow mx-auto d-inline-flex flex-column flex-md-row mt-2"
@@ -473,8 +475,8 @@
                 <img src="assets/images/logo.png" class="logo" />
               </li>
               <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci
-                sociis porttitor varius neque viverra.
+                SelVest, digitizing, automating & simplify savings &amp;
+                investment transactions
               </li>
               <li
                 class="d-flex align-items-center justify-content-center justify-content-sm-start"
