--- a/app/savings.html
+++ b/app/savings.html
@@ -467,9 +467,9 @@
                 Download SelVest App Today
               </h1>
               <p class="text-white">
-                Lorem ipsum dolor sit amet consectetur adipis
+                Get the link sent to you &amp; start saving
                 <br class="d-none d-sm-inline-block" />
-                SelVest & get referral bonus
+                with SelVest today!
               </p>
               <div
                 class="text-center shadow mx-auto d-inline-flex flex-column flex-md-row mt-2"
@@ -501,8 +501,8 @@
                 <img src="assets/images/logo.png" class="logo" />
               </li>
               <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci
-                sociis porttitor varius neque viverra.
+                SelVest, digitizing, automating & simplify savings &amp;
+                investment transactions
               </li>
               <li
                 class="d-flex align-items-center justify-content-center justify-content-sm-start"
