--- a/app/invest.html
+++ b/app/invest.html
@@ -50,21 +50,34 @@
 
           <div class="nav__menu">
             <a
-              href="#how-it-works"
-              class="mx-auto text-center nav__link nav__link--js nav__link--mobile nav__link--active"
+              href="about.html"
+              class="mx-auto text-center nav__link nav__link--mobile"
             >
-              How it works
+              About
             </a>
             <a
-              href=""
-              class="mx-auto text-center nav__link nav__link--js nav__link--mobile nav__link--active"
+              href="savings.html"
+              class="mx-auto text-center nav__link nav__link--mobile"
             >
+              Save
             </a>
             <a
-              href="https://flexednetwork.com/contacts.html"
-              class="mx-auto text-center nav__link nav__link--mobile nav__link--active"
+              href="invest.html"
+              class="mx-auto text-center nav__link nav__link--mobile"
             >
-              Contact Us
+              Invest
+            </a>
+            <a
+              href="login.html"
+              class="mx-auto text-center nav__link nav__link--mobile"
+            >
+              Sign In
+            </a>
+            <a
+              href="login.html"
+              class="mx-auto btn btn-custom btn-success text-center text-white nav__link nav__link--mobile"
+            >
+              Sign Up
             </a>
           </div>
         </div>
