--- a/app/index.html
+++ b/app/index.html
@@ -49,21 +49,34 @@
 
           <div class="nav__menu">
             <a
-              href="#how-it-works"
-              class="mx-auto text-center nav__link nav__link--js nav__link--mobile nav__link--active"
+              href="about.html"
+              class="mx-auto text-center nav__link nav__link--mobile"
             >
-              How it works
+              About
             </a>
             <a
-              href=""
-              class="mx-auto text-center nav__link nav__link--js nav__link--mobile nav__link--active"
+              href="savings.html"
+              class="mx-auto text-center nav__link nav__link--mobile"
             >
+              Save
             </a>
             <a
-              href="https://flexednetwork.com/contacts.html"
-              class="mx-auto text-center nav__link nav__link--mobile nav__link--active"
+              href="invest.html"
+              class="mx-auto text-center nav__link nav__link--mobile"
             >
-              Contact Us
+              Invest
+            </a>
+            <a
+              href="login.html"
+              class="mx-auto text-center nav__link nav__link--mobile"
+            >
+              Sign In
+            </a>
+            <a
+              href="login.html"
+              class="mx-auto btn btn-custom btn-success text-center text-white nav__link nav__link--mobile"
+            >
+              Sign Up
             </a>
           </div>
         </div>
@@ -83,10 +96,10 @@
               and medium-to-long term investment options
             </span>
             <div class="mt-5">
-              <a href="" class="mr-1 mr-sm-2"
+              <a href="" class="mr-1 mr-sm-2 mb-3 mb-sm-0 d-inline-block"
                 ><img src="assets/images/svg/google.svg" alt="" />
               </a>
-              <a href="" class=""
+              <a href="" class="d-inline-block"
                 ><img src="assets/images/svg/apple.svg" alt="" />
               </a>
             </div>
@@ -343,50 +356,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="row">
-          <div class="col-12">
-            <div
-              class="d-flex partner__container flex-wrap align-items-center justify-content-around"
-            >
-              <div class="partner position-relative mx-2 my-3">
-                <img
-                  src="assets/images/slack.png"
-                  class="partner__img"
-                  alt=""
-                  style="opacity: 0.3"
-                />
-              </div>
-              <div class="partner position-relative mx-2 my-3">
-                <img
-                  src="assets/images/google.png"
-                  class="partner__img"
-                  alt=""
-                />
-              </div>
-              <div class="partner position-relative mx-2 my-3">
-                <img
-                  src="assets/images/creditclan.png"
-                  class="partner__img"
-                  alt=""
-                />
-              </div>
-              <div class="partner position-relative mx-2 my-3">
-                <img
-                  src="assets/images/paystack.png"
-                  class="partner__img"
-                  alt=""
-                />
-              </div>
-              <div class="partner position-relative mx-2 my-3">
-                <img
-                  src="assets/images/github12.png"
-                  class="partner__img"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
-        </div> -->
       </div>
     </section>
 
